# game-life

./: CMakeLists.txt  main.cpp  matrix.h  run.sh  test.sh
